--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ a {
     font-size: 3rem;
   }
 
-
+.invalid{
+    background: rgb(235, 174, 174);
+    box-shadow: 0px 0px 10px 1px rgb(255, 65, 65);
+}
 
 
 /* -------------------------------------------------------------------------- */
