--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,25 @@ a {
     box-shadow: 0px 0px 10px 1px rgb(255, 65, 65);
 }
 
+.popover{
+    color: rgb(144, 227, 240);
+    border-radius: 10px;
+    border: 1px solid white;
+    animation-duration: 1s;
+    animation-iteration-count: initial;
+}
+
+.popover-header{
+    background: #ff3333;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.popover-body{
+    background: rgb(201, 201, 201);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+  
 
 /* -------------------------------------------------------------------------- */
 /*                                MEDIA QUERIES                               */
