--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ p{
 
 button {
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
+    border-radius: 20px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -111,16 +112,35 @@ button {
 /* -------------------------------------------------------------------------- */
 button{
     margin: 10px 0;
+    border-radius: 20px;
+    
 }
 
-#howto {
-    margin-top: 30px;
+#employee-info{
+    margin-bottom: 40px;
 }
 
 input{
     margin: 0px 0px 10px 0px;
 }
 
+/* -------------------------------------------------------------------------- */
+/*                               BUTTON STYLING                               */
+/* -------------------------------------------------------------------------- */
+
+#howto {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    border: 3px solid #AFE3DC;
+    background: #407A62;
+}
+
+#convert {
+    border-radius: 20px;
+    border: 3px solid #AFE3DC;
+    background: #407A62;
+}
 /* -------------------------------------------------------------------------- */
 /*                               POPOVER STYLING                              */
 /* -------------------------------------------------------------------------- */
